# intelligent_inference_router

./: .env.example  .gitignore  .gitlab-ci.yml  .python-version  .windsurfrules  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_STATUS.md  LICENSE  MVP_CHECKLIST.md  Makefile  PRD.md  README.md  api_keys.sqlite3  client.env  config.defaults.yaml  config.yaml  conftest.py  deploy_remote.sh  docker-compose.override-sample.yml  docker-compose.yml  forward_logs_udp.py  gemini_test.py  generate_api_key.py  hf_login.sh  last_404s.txt  locustfile.py  mkdocs.yml  package.json  pyproject.toml  pytest.ini  redis_ping.py  requirements-dev.txt  requirements.txt  run_remote_loadtest.sh  run_remote_tests.sh  secrets.md  start_server.sh  test_redis_connection.py  test_registry_api.py  (+2 more)
.github/workflows/: ci.yml  docs.yml
cache_service/: Cargo.toml  Dockerfile
cache_service/src/: main.rs
config/: defaults.yaml  models.yaml
db-provisioning/: README.md
docker/: Dockerfile.router  prometheus.yml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPER_ONBOARDING.md  FEATURES.md  MODEL_REGISTRY.md  MONITORING.md  SETUP.md  TROUBLESHOOTING.md  api_examples.md  cluster_setup.md  index.md  local_agent.md  models_seed.json  router_api.md  router_config.md  setup.md  usage.md
local_agent/: __init__.py  main.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
monitoring/: grafana-dashboard.json  prometheus.yml  router-cache-metrics.json
n8n/: README.md
podman/: Containerfile.router  podman-compose.yml
podman/prometheus/: prometheus.yml
router/: __init__.py  apikey_db.py  auth.py  cache.py  classifier.py  cli.py  config.example.yaml  config.py  config.yaml  error_response.py  log_udp_handler.py  main.py  max_body_size_middleware.py  metrics.py  model_registry.py  openai_models.py  openai_routes.py  provider_router.py  refresh_models.py  registry.py  registry_status.py  schemas.py  secret_scrubber.py  security.py  settings.py  utils.py  validation_utils.py
router/migrations/: 001_add_kind_column.py  __init__.py
scripts/: chat_completion.sh  dev_register_and_list_models.py  dev_register_key_and_env.py  full_rebuild_restart_loadtest.sh  list_models.sh  rebuild_and_test.sh  rebuild_model_registry.py  rebuild_stack.sh  update_hf_token.sh
tests/: conftest.py  conftest_main_api.py  conftest_registry.py  test_chat_completions_400.py
(+118 files in other folders)
