[project]
name = "intelligent_inference_router"
version = "0.1.0"
description = "Distributed inference router system"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.dependencies]
fastapi = "^0.110"
uvicorn = {version = "^0.29", extras = ["standard"]}
httpx = "^0.27"
sqlalchemy = "^2.0"
typer = "^0.9"
prometheus-client = "^0.20"
redis = "^5.0"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.router]
cost_weight = 1.0
latency_weight = 1.0
cost_threshold = 1000
