[project]
name = "intelligent_inference_router"
version = "0.1.0"
description = "Distributed inference router system"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "httpx>=0.27,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "typer>=0.9,<1.0",
    "prometheus-client>=0.20,<1.0",
    "redis>=5.0,<6.0",
    "transformers>=4.40,<5.0",
    "huggingface_hub>=0.23,<1.0"
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["data", "router", "local_agent", "worker_cluster"]

[tool.router]
cost_weight = 1.0
latency_weight = 1.0
cost_threshold = 1000
